plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace = 'com.citadawn.speechapp'
    compileSdk = 36

    defaultConfig {
        applicationId = "com.citadawn.speechapp"
        minSdk = 24
        targetSdk = 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    // 禁用语言分割，避免Play Core警告
    bundle {
        language {
            enableSplit = false
        }
    }

    lintOptions {
        // 官方推荐的标准配置：错误阻止构建，警告不阻止构建
        abortOnError true
        warningsAsErrors false
        // 不设置 checkOnly，检查所有 lint 规则
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}